Added exception message assertions and verifications for repository calls for auth and garment service unit tests